migration-result/docs/ver/13.x/access-controls/guides/hardware-key-support.mdx
---
title: Hardware Key Support
description: Hardware Key Support
version: "13.x"
---

## Introduction

<Warning>
  <p>
    **Enterprise**
  </p>

  Hardware Key Support requires Teleport Enterprise.
</Warning>

By default, `tsh`, Teleport Connect, and other Teleport clients store a user's key and certificates directly
on their filesystem. If a user's filesystem is compromised, any of their active Teleport user keys and certificates
would also be compromised.

You can configure [per-session MFA](/docs/ver/13.x/access-controls/guides/per-session-mfa) to require a multi-factor authentication check
when users start new sessions with Teleport services, such as the SSH Service, Kubernetes Service, Database Service, and so on.
However, per-session MFA doesn't prevent compromised session credentials from taking other actions, such as
running administrative commands with `tctl`.

To prevent these types of attacks, Teleport supports hardware-based private keys.
Unlike disk-based private keys, hardware-based private keys are generated and stored directly
on a hardware device and are impossible to export.
With hardware-based private keys, a login session is only functional if there's also access to the
hardware device where the key was generated and stored.

Additionally, you can configure this feature to require a touch for every Teleport request, including non-session requests
like `tctl edit`. With touch required, hardware key support provides better security than per-session MFA.

<Note>
  <p>
    **touch caching**
  </p>

  A user's touch is cached on the hardware security key for 15 seconds to prevent excessive touch prompts.
</Note>

<Warning>
  <p>
    **Compatibility Issues**
  </p>

  Hardware key support provides the best security available.
  However, there are some limitations in the services that support hardware keys.

  Supported:

  - Teleport clients `tsh`, `tctl`, and Teleport Connect.
  - Standard Teleport API requests such as `tsh ls`, `tctl create`, and so on.
  - Server access.
  - Database access with `tsh proxy db` instead of `tsh db connect`.
  - Kubernetes access with `tsh proxy kube` instead of `tsh kube login`.

  Not yet supported:

  - Teleport Web UI (except for user registration and reset password).
  - Agent forwarding functionality such as `tsh ssh -A`, Proxy Recording mode, and OpenSSH integration.
  - Desktop access.
  - Application access.

  If you require users to have a hardware key to access your infrastructure, they won't be able to
  use any of the unsupported features either because the hardware key can't be accessed or because
  the protocol only supports raw private keys.

  To navigate these incompatibilities, we recommend that you enable hardware key support only when
  necessary, such as for roles with access to critical infrastructure. These roles can be accessed
  as needed with Access Requests so that users can avoid these issues for their normal login
  sessions. We also recommend trying [Teleport Connect](/docs/ver/13.x/connect-your-client/teleport-connect)
  as an alternative to the Teleport Web UI.
</Warning>

## Prerequisites

<Tabs>
  <Tab title="Self-Hosted Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise [Getting
      Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.4.16.
      You can download these tools by visiting your [Teleport account](https://teleport.sh).
      You can verify the tools you have installed by running the following commands:

      ```bash
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      To download these tools, visit the [Downloads](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- A series 5+ YubiKey

<Note>
  <p>
    **PIV support**
  </p>

  Hardware key support requires users to use a PIV-compatible hardware key.
  Currently, this feature is only guaranteed to support YubiKey series 5+.

  Teleport clients use PIV slot 9a for the `hardware_key` option and 9c for the `hardware_key_touch` option,
  and will overwrite other keys and certificates in those slots, as needed.
  This behavior might interfere with other PIV applications, like `yubikey-agent`,
  so we recommend only using one PIV application at a time.
</Note>

- Install a smart card driver for you operating system. Teleport clients will connect to your YubiKey through the smart card driver to generate keys and perform cryptographic operations.
  - MacOS and Windows both ship with smart card drivers.
    - If you run into problems on Windows, try the official [YubiKey Smart Card Minidriver](https://www.yubico.com/support/download/smart-card-drivers-tools/).
  - On Linux distributions, download the [YubiKey Manager or Yubico PIV tool](https://www.yubico.com/support/download/smart-card-drivers-tools/), which both include the Linux smart card driver as a dependency.
- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```bash
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```bash
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>

## Step 1/2. Enforce hardware key support

Hardware key support is not required by default.
You can enforce hardware key support for specific roles, as shown here:

```yaml
kind: role
metadata:
  name: admin
spec:
  options:
    require_session_mfa: hardware_key_touch
```

You can also enforce hardware key support cluster-wide by updating your Teleport configuration:

```bash
$ tctl edit cap
```

Set the value of `spec.require_session_mfa` to `hardware_key_touch`:

```yaml
kind: cluster_auth_preference
metadata:
  ...
  name: cluster-auth-preference
spec:
  ...
  require_session_mfa: hardware_key_touch
  ...
version: v2
```

After you save and exit the editor, `tctl` updates the resource:

```text
cluster auth preference has been updated
```

## Step 2/2. Log in

After you configure a role or cluster to require a hardware key, all users signing in with that
role or to that cluster must use their hardware key for all Teleport requests.

Affected users will be prompted to connect and touch their YubiKey to sign in.
The first time users sign in with their hardware key they might be required to immediately sign in again.

<Tabs>
  <Tab title="Teleport Community Edition">
    ```bash
    $ tsh login --user=dev --proxy=proxy.example.com:3080
    # Enter password for Teleport user dev:
    # Unmet private key policy "hardware_key_touch".
    # Relogging in with hardware-backed private key.
    # Enter password for Teleport user dev:
    # Tap your YubiKey
    # > Profile URL:        https://example.com
    #   Logged in as:       dev
    #   Cluster:            example.com
    #   ...

    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    ```bash
    $ tsh login --user=dev --proxy=proxy.example.com:3080
    # Enter password for Teleport user dev:
    # Unmet private key policy "hardware_key_touch".
    # Relogging in with hardware-backed private key.
    # Enter password for Teleport user dev:
    # Tap your YubiKey
    # > Profile URL:        https://example.com
    #   Logged in as:       dev
    #   Cluster:            example.com
    #   ...
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    ```bash
    $ tsh login --user=dev --proxy=proxy.example.com:3080
    # Enter password for Teleport user dev:
    # Unmet private key policy "hardware_key_touch".
    # Relogging in with hardware-backed private key.
    # Enter password for Teleport user dev:
    # Tap your YubiKey
    # > Profile URL:        https://example.com
    #   Logged in as:       dev
    #   Cluster:            example.com
    #   ...
    ```
  </Tab>
</Tabs>

Affected users with existing sessions that aren't backed by a hardware key are prompted to sign in again
on their next request. For example:

```bash
$ tsh clusters
# Unmet private key policy "hardware_key_touch"
# Relogging in with hardware-backed private key.
# Enter password for Teleport user dev:
# Tap your YubiKey
# Cluster Name Status Cluster Type Labels Selected 
# ----------- ------ ------------ ------ -------- 
# example.com online root                *        
```

## Configuring hardware key support with per-session MFA

For existing users of per-session MFA, upgrading to `hardware_key_touch` might seem disruptive because it affects
all access requests rather than just session requests.
Although upgrading to `hardware_key_touch` provides the best security, you can get a similar level of security
by combining hardware key support with per-session MFA.

You can configure this combined functionality by specifying `require_session_mfa: hardware_key` in the `role` and `cluster_auth_preference` settings.
This option continues to use per-session MFA checks for starting sessions and requires hardware-based private keys for all Teleport requests.

This configuration prevents basic data exfiltration attacks for Teleport sessions and requests.
However, since MFA is only required for sessions, non-session requests like `tctl edit` can still
be used by an attacker with remote access to the user's computer with the user's private key
available through the connected hardware device.

## Troubleshooting

### `ERROR: private key policy not met`

This error is returned by the Auth and Proxy services if a user does not meet the required private key policy.
Both `tsh` and Teleport Connect automatically catch these errors and require the user to sign in again with a valid hardware-based private key.
If you see this error, make sure that your client is up to date (v11.0.0+).

This error is also displayed in the Teleport Web UI if a role or cluster require a hardware key because the
Web UI doesn't support hardware-based private keys.

### `ERROR: authenticating with management key: auth challenge: smart card error 6982: security status not satisfied`

Smart card auth challenge errors can appear when the wrong Management key or PIN is used.
Teleport clients expect a fresh PIV module with the default Management and PIN keys.
You can reset these keys, along with any existing PIV keys and certificates, with the
[yubikey manager tool command](https://developers.yubico.com/yubikey-manager/) `ykman piv reset`.

### `ERROR: ssh: handshake failed: command failed: transmitting request: an attempt was made to end a non-existent transaction`

Sometimes, PIV interactions with your Yubikey can fail in unexpected ways.

For example, if you tap your Yubikey for MFA and then subsequently tap your
Yubikey for Hardware Key support, you might get an error on rare occasions.

### Why am I being asked to tap X times to login?

Depending on your settings, you might be asked to tap your Yubikey many times.
Each tap is necessary to safely authenticate you.

For example, if you have `second_factor: webauthn` set in your `cluster_auth_preference`,
and `require_session_mfa: hardware_key_touch` set on your role,
you'll see the following output when you first sign in:

```bash
$ tsh login --user=dev --proxy=root.example.com:3080

# First login as usual, as the unauthenticated client has no way of inferring
# that "hardware_key_touch" is required by the user's role.

Enter password for Teleport user dev:
Tap any security key
Detected security key tap

# Login results in a "hardware_key_touch" error.

Unmet private key policy "hardware_key_touch".

# At this point, `tsh` can infer from the error that the user's role requires 
# "hardware_key_touch", so it generates a private key directly on the hardware key
# with a tap and re-initiates the sign in process.

Tap your YubiKey
Relogging in with hardware-backed private key.

# This time, `tsh` uses the Yubikey-backed private key in the login request to
# get certificates which pass the private key policy for the user's role.

Enter password for Teleport user dev:
Tap any security key
Detected security key tap
> Profile URL:        https://root.example.com:3080
  Logged in as:       dev
  Cluster:            root.example.com
  ...
```
